<resources>
    <string name="app_name">Practica1_calcu</string>
    <string name="boton">"Sumar +1"</string>
    <string name="pulsador">Restar -1</string>
    <string name="textview">TextView</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="suma">+</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="autor">Autor</string>
    <string name="cient">Cient</string>
    <string name="coma">,</string>
    <string name="igual">=</string>
    <string name="x">X</string>
    <string name="menos">-</string>
    <string name="division">:</string>

//Cientifica

    <string name="sen">"sen(X)"</string>
    <string name="cos">"cos(x)"</string>
    <string name="tan">"tan(x)"</string>
</resources>