<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="18dp"
    tools:layout_editor_absoluteY="571dp">

    <Button
        android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/division"
        app:layout_constraintBottom_toTopOf="@+id/multiplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boton14" />

    <Button
        android:id="@+id/resta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/menos"
        app:layout_constraintBottom_toTopOf="@+id/suma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boton6" />

    <Button
        android:id="@+id/multiplicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/x"
        app:layout_constraintBottom_toTopOf="@+id/resta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boton9" />

    <Button
        android:id="@+id/boton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/boton6"
        app:layout_constraintEnd_toStartOf="@+id/multiplicacion"
        app:layout_constraintStart_toEndOf="@+id/boton8" />

    <Button
        android:id="@+id/boton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/boton5"
        app:layout_constraintEnd_toStartOf="@+id/boton9"
        app:layout_constraintStart_toEndOf="@+id/boton7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/boton"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="11dp"
        android:text="@string/boton"
        app:layout_constraintBottom_toTopOf="@+id/text_cont"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextSizeCheck,VisualLintOverlap" />

    <Button
        android:id="@+id/pulsador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pulsador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/boton17"
        app:layout_constraintEnd_toStartOf="@+id/boton2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_cont"
        android:layout_width="102dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/pulsador"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="380dp"
        android:layout_height="127dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/boton0"
        app:layout_constraintEnd_toStartOf="@+id/boton3"
        app:layout_constraintStart_toEndOf="@+id/boton1" />

    <Button
        android:id="@+id/boton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/boton11"
        app:layout_constraintEnd_toStartOf="@+id/suma"
        app:layout_constraintStart_toEndOf="@+id/boton2" />

    <Button
        android:id="@+id/boton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/boton1"
        app:layout_constraintEnd_toStartOf="@+id/boton5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/boton2"
        app:layout_constraintEnd_toStartOf="@+id/boton6"
        app:layout_constraintStart_toEndOf="@+id/boton4" />

    <Button
        android:id="@+id/boton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/boton3"
        app:layout_constraintEnd_toStartOf="@+id/resta"
        app:layout_constraintStart_toEndOf="@+id/boton5" />

    <Button
        android:id="@+id/boton7"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/boton4"
        app:layout_constraintEnd_toStartOf="@+id/boton8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="200dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton11"
        app:layout_constraintStart_toEndOf="@+id/boton17" />

    <Button
        android:id="@+id/igual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="200dp"
        android:text="@string/igual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boton11" />

    <Button
        android:id="@+id/boton11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="200dp"
        android:text="@string/coma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/igual"
        app:layout_constraintStart_toEndOf="@+id/boton0" />

    <Button
        android:id="@+id/boton17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="200dp"
        android:text="@string/cient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/porcentaje"
        app:layout_constraintBottom_toTopOf="@+id/boton9"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintStart_toEndOf="@+id/boton12" />

    <Button
        android:id="@+id/boton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/boton8"
        app:layout_constraintEnd_toStartOf="@+id/boton14"
        app:layout_constraintStart_toEndOf="@+id/boton16" />

    <Button
        android:id="@+id/boton16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ac"
        app:layout_constraintBottom_toTopOf="@+id/boton7"
        app:layout_constraintEnd_toStartOf="@+id/boton12"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/suma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/suma"
        app:layout_constraintBottom_toTopOf="@+id/igual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boton3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="Switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton17" />

</androidx.constraintlayout.widget.ConstraintLayout>